--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,38 @@
     <link rel="stylesheet" href="style.css">
     <title>Sign-up Baby</title>
 </head>
+
 <body>
-    
+    <div class="left">
+        <p>Photo by <a
+                href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
+                Lisbin</a> on <a
+                href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+        </p>
+    </div>
+    <div class="right">
+        <div>
+            <p>This is not a real online service! You know you need something like this in your life to help you realize
+                your deepest dreams. Sign up <em>now</em> to get started!</p>
+        </div>
+        <div class="form">
+            <form action="" method="post">
+                <label for="first_name">First name:</label>
+                <input type="text" id="first_name" placeholder="Your first name">
+                <label for="last_name">Last name:</label>
+                <input type="text" id="last_name" placeholder="Your last name">
+                <label for="email"> Your e-mail: </label>
+                <input type="email" id="email" placeholder="example@example.com">
+                <label for="telephone">Your phone number:</label>
+                <input type="amount" id="telephone" placeholder="only numbers here">
+        </div>
+        <div class="submit">
+            <button type="submit">Create account</button>
+            <p>Already have an account? Log in here!</p>
+        </div>
+        </form>
+
+    </div>
 </body>
+
 </html>
