--- a/index.html
+++ b/index.html
@@ -11,35 +11,39 @@
 </head>
 
 <body>
-    <div class="left">
-        <p>Photo by <a
-                href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
-                Lisbin</a> on <a
-                href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-        </p>
-    </div>
-    <div class="right">
-        <div>
-            <p>This is not a real online service! You know you need something like this in your life to help you realize
-                your deepest dreams. Sign up <em>now</em> to get started!</p>
+    <div class="container">
+        <div class="left">
+            <p>Photo by <a
+                    href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
+                    Lisbin</a> on <a
+                    href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </p>
         </div>
-        <div class="form">
-            <form action="" method="post">
-                <label for="first_name">First name:</label>
-                <input type="text" id="first_name" placeholder="Your first name">
-                <label for="last_name">Last name:</label>
-                <input type="text" id="last_name" placeholder="Your last name">
-                <label for="email"> Your e-mail: </label>
-                <input type="email" id="email" placeholder="example@example.com">
-                <label for="telephone">Your phone number:</label>
-                <input type="amount" id="telephone" placeholder="only numbers here">
-        </div>
-        <div class="submit">
-            <button type="submit">Create account</button>
-            <p>Already have an account? Log in here!</p>
-        </div>
-        </form>
+        <div class="right">
+            <div class="intro">
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize
+                    your deepest dreams. Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form">
+                <form action="" method="post">
+                    <div><label for="first_name">First name:</label>
+                        <input type="text" id="first_name" placeholder="Your first name"></div>
+                    <div><label for="last_name">Last name:</label>
+                        <input type="text" id="last_name" placeholder="Your last name"></div>
+                    <div><label for="email"> Your e-mail: </label>
+                        <input type="email" id="email" placeholder="example@example.com"></div>
+                    <div><label for="telephone">Your phone number:</label>
+                        <input type="amount" id="telephone" placeholder="only numbers here"></div>
+            </div>
+            <div class="submit">
+                <button type="submit">Create account</button>
+                <p>Already have an account? Log in here!</p>
+            </div>
+            </form>
 
+        </div>
     </div>
 </body>
 
