--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 <body>
     <div class="container">
         <div class="left">
-            <p>Photo by <a
+            <div class="logo">
+               <img src="logo.jpg" height="75px">              
+            </div>
+            <div><p>Photo by <a
                     href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
                     Lisbin</a> on <a
                     href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-            </p>
+            </p></div>
         </div>
         <div class="right">
             <div class="intro">
