--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <div class="container">
         <div class="left">
             <div class="logo">
-               <img src="logo.jpg" height="75px">              
+                <img src="logo.jpg" height="75px">
             </div>
-            <div><p>Photo by <a
-                    href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
-                    Lisbin</a> on <a
-                    href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-            </p></div>
+            <div>
+                <p>Photo by <a
+                        href="https://unsplash.com/@tlisbin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tommy
+                        Lisbin</a> on <a
+                        href="https://unsplash.com/s/photos/bouldering?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                </p>
+            </div>
         </div>
         <div class="right">
             <div class="intro">
@@ -30,15 +32,21 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <div class="form">
+                <p>Let's do this!</p>
                 <form action="" method="post">
-                    <div><label for="first_name">First name:</label>
-                        <input type="text" id="first_name" placeholder="Your first name"></div>
-                    <div><label for="last_name">Last name:</label>
-                        <input type="text" id="last_name" placeholder="Your last name"></div>
-                    <div><label for="email"> Your e-mail: </label>
-                        <input type="email" id="email" placeholder="example@example.com"></div>
-                    <div><label for="telephone">Your phone number:</label>
-                        <input type="amount" id="telephone" placeholder="only numbers here"></div>
+                    <div id="form"><label for="first_name">First name:</label>
+                        <input type="text" id="first_name" placeholder="Your first name" autofocus required>
+                        <label for="last_name">Last name:</label>
+                        <input type="text" id="last_name" placeholder="Your last name" required></div>
+                    <div id="form"><label for="email">E-mail: </label>
+                        <input type="email" id="email" placeholder="example@example.com" required>
+                        <label for="telephone">Phone number:</label>
+                        <input type="amount" id="telephone" pattern="^0\d{1,3}[-|\s]?\d{6,8}" minlength="10"
+                            maxlength="11"></div>
+                    <div id="form"><label for="password">Password</label>
+                        <input type="password" id="password" required>
+                        <label for="password">Confirm password</label>
+                        <input type="password" id="password" required></div>
             </div>
             <div class="submit">
                 <button type="submit">Create account</button>
